fix text alignment & requirements.txt

--- a/static/style/recom.css
+++ b/static/style/recom.css
@@ -47,6 +47,7 @@
 .text {
 	display: flex;
 	z-index: 10;
+	text-align: center;
 }
 
 .bg-material {
@@ -57,24 +58,13 @@
 	width: 100%;
 	height: 100%;
 	background-size: cover;
-	filter: blur(50px);
+	filter: blur(60px);
 }
 
 .row2 {
 	width: 100%;
 	display: flex;
 	gap: 1rem;
-}
-
-.bg-material-recom {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background-size: cover;
-	filter: blur(20px);
 }
 
 .curver {
